tests/src/frontend/typechecking/invalid/vec_covariant_2.sk
class MyContainer<T: A>(value: T)

base class A
class B() extends A

fun listOfObjects<T>(T -> MyContainer<A>): void {
  void
}

fun main(): void {
  f = _ -> MyContainer(B());
  _ = listOfObjects(f);
  print_raw("No")
}
